<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCU Freshmen Guide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Fragment1">This is Fragment 1</string>
    <string name="FragmentTab1">This is ViewPager Fragment Tab 1</string>
    <string name="FragmentTab2">This is ViewPager Fragment Tab 2</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_university_policies">University Policies</string>
    <string name="title_activity_news_and_events">News And Events</string>
    <string name="title_activity_courses_offered">Courses Offered</string>
    <string name="title_activity_ucuhymn">UCU Hymn</string>
    <string name="title_activity_about">About</string>

<<<<<<< HEAD
=======
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>University Policies</item>
        <item>Campus Map</item>
        <item>News and Events</item>
        <item>University Hymn</item>
        <item>About</item>
    </string-array>

   <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_book</item>
        <item>@drawable/ic_maps</item>
        <item>@drawable/ic_events</item>
        <item>@drawable/ic_play</item>
        <item>@drawable/ic_about</item>
    </array>

    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_news__events">News and Events</string>
    <string name="title_activity_ucu__hymn">UCU Hymn</string>
    <string name="title_activity_about">About UCU Mobile</string>
    <string name="title_activity_rules__regulations">University Policies</string>
    <string name="vision">Vision</string>
    <string name="vision_content">A transformative, self-reliant, and dynamic university recognized as center of excellence with globally competitive professionals and distinctive capabilities in research, extension, and production.</string>
    <string name="mision">Mision</string>
    <string name="mision_content">A University that shall provide advanced instruction in the field of arts, sciences, teacher education, technical and entrepreneurship and establish a strong research culture with active involvement in extension and production activities.</string>
    <string name="goal">Goal</string>
    <string name="goal_content">The University aims to contribute to the attainment of national developmental goals through character building, academic excellence, promotion and enrichment of the Filipino historical and cultural heritage and preservation of environment.</string>
    <string name="obj">OBJECTIVES(TRANSFORMED)</string>
    <string name="obj_content1">T-Train the faculty and staff for professional advancement through study grants and training.</string>
    <string name="obj_content2">R-Restructure development programs which cater to the holistic transformation of students, faculty, staff and administration through curriculum enrichment, human resource development and character building.</string>
    <string name="obj_content3">A-Apply research finding to address problems and issuesaffecting individuals and the community in order to improve quality of life.</string>
    <string name="obj_content4">N-Nurture the conversation and preservation of the environment, arts and culture.</string>
    <string name="obj_content5">S-Save the people through the conduct of relevant outreach programs and establishment of linkages.</string>
    <string name="obj_content6">F-Formulate academic programs that cater to the demands of the market and labor and the changing needs of the times.</string>
    <string name="obj_content7">O-Offer scholarships opportunities for poor but deserving students in order to attain quality education.</string>
    <string name="obj_content8">R-Revise periodically the curricular offering to respond to the needs of the community for global competitiveness.</string>
    <string name="obj_content9">M-Mobilize faculty students and staff to conduct relevant researches and studies.</string>
    <string name="obj_content10">E-Equip individuals with professional competence, scientific, and technological skills and ethical/spiritual values to enable them the needed leadership in industry, government and the professions.</string>
    <string name="obj_content11">D-Develop innate talents and skills of students to become self-directing, productive, and competent professionals in order to meet global demands and standards.</string>
    
    
    
    
    <string name="title_activity_icon_generator">IconGenerator</string>

>>>>>>> origin/master
</resources>
